--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 README.md
-Config/DbConfig.php
-Pro/Config/DbConfig.php
+/Config/DbConfig.php
+/Pro/Config/DbConfig.php
 .htaccess
-Public/inc/url.php
+/Public/inc/url.php
